--- a/geekbuying_clone/src/style/Home.css
+++ b/geekbuying_clone/src/style/Home.css
@@ -26,7 +26,7 @@
 }
 
 #FirstDiv{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     width: 1500px;
     display: flex;
@@ -76,7 +76,7 @@
     color: red;
 }
 #dealOfDayProducts{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 230px;
     display: flex;
     justify-content: space-around;
@@ -144,7 +144,7 @@
 #FeaturedProductsDiv{
     width: 698px;
     height: 311px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -338,7 +338,7 @@
 #EnjoyLifeDiv{
     height: 686px;
     width: 1500px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: 40px auto;
     display: flex;
     flex-direction: column;
@@ -359,7 +359,7 @@
     align-items: center;
 }
 #EnjoyLifeBanner{
-    border: 1px solid green;
+    /* border: 1px solid green; */
     height: 632px;
     width: 500px;
     border-radius: 5px;
@@ -370,16 +370,17 @@
     width: 100%;
 }
 #EnjoyLifeProductDiv{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 632px;
     width: 980px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    padding: 0px 30px;
 }
 .EnjoyLifeProduct{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 308px;
     width: 440px;
     background-color: #F0F5FD;
@@ -389,30 +390,30 @@
 .EnjoyLifeProduct h3{
     font-size: 16px;
     font-weight: 700;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 12px;
 }
 .EnjoyLifeProductSingleDiv{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 254px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 .EnjoyLifeProductSingle{
-    border: 1px dotted blue;
+    /* border: 1px dotted blue; */
     height: 254px;
     width: 210px;
 }
 .EnjoyLifeProductSingleImg{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 210px;
     width: 210px;
     border-radius: 5px;
     overflow: hidden;
 }
 .EnjoyLifeProductSingleTitle{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 210px;
     font-size: 14px;
     color: #0066FF;
@@ -511,7 +512,7 @@
     margin: 0px 5px;
 }
 #PopularBrandsDiv{
-    border: 1px solid brown;
+    /* border: 1px solid brown; */
     margin: 40px auto;
     width: 1500px;
     display: flex;
@@ -528,10 +529,10 @@
     height: 260px;
     width: 1500px;
     margin: auto;
-    border: 1px dashed green;
+    /* border: 1px dashed green; */
 }
 .PopularBrandsSingleDiv{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 300px;
     width: 1500px;
     display: flex;
@@ -540,7 +541,7 @@
     margin: 20px auto;
 }
 .brandBanner{
-    border: 1px dashed green;
+    /* border: 1px dashed green; */
     height: 300px;
     width: 460px;
 }
@@ -549,16 +550,18 @@
     width: 100%;
 }
 #brandProductsDiv{
-    border: 1px solid red;
+    border: 1px solid rgb(224, 224, 224);
     height: 300px;
     width: 1040px;
     display: flex;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
     justify-content: space-between;
     align-items: center;
 }
 .brandproducts{
     box-sizing: content-box;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 288px;
     width: 210px;
     padding: 0px 25px;
@@ -566,7 +569,7 @@
 .brandproductsImg{
     height: 180px;
     width: 210px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .brandproductsImg img{
     height: 100%;
@@ -590,7 +593,7 @@
     font-size: 14px;
     line-height: 20px;
     width: 210px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .brandproductsContent h4{
     font-size: 18px;
