--- a/geekbuying_clone/src/style/ProductDetails.css
+++ b/geekbuying_clone/src/style/ProductDetails.css
@@ -2,17 +2,17 @@
     font-family: sans-serif;
 }
 #ProductDetailsPage{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: auto;
     width: 1500px;
 }
 #breadcrum{
-    border: 1px dashed red;
+    /* border: 1px dashed red; */
     width: 1500px;
     margin: 16px auto;
 }
 #productPrimaryDiv{
-    border: 1px dashed green;
+    /* border: 1px dashed green; */
     height: 603px;
     width: 1500px;
     margin: 10px auto;
@@ -21,7 +21,7 @@
     align-items: center;
 }
 #productPrimaryDivImg{
-    border: 1px solid gray;
+    /* border: 1px solid gray; */
     height: 100%;
     width: 500px;
 }
@@ -30,12 +30,12 @@
     width: 500px;
 }
 #productPrimaryDivTitle{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 750px;
     height: 100%;
 }
 #title{
-    border: 1px dashed green;
+    /* border: 1px dashed green; */
     height: 48px;
     font-size: 18px;
     font-weight: 700;
@@ -65,7 +65,7 @@
 }
 #PriceDiv{
     height: 38px;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     display: flex;
     align-items: center;
 }
@@ -109,7 +109,7 @@
     padding: 4px 10px;
 }
 #shipDiv{
-    border: 1px dashed red; 
+    /* border: 1px dashed red;  */
 }
 #shipDiv p{
     font-size: 14px;
@@ -125,10 +125,10 @@
     align-items: center;
     border-radius: 4px;
     color: #0066FF;
-    border: 1px solid #0066FF;
+    /* border: 1px solid #0066FF; */
 }
 #shipFrom{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
     align-items: center;
 }
@@ -152,15 +152,38 @@
     width: 30px;
     height: 100%;
     border: 1px solid rgb(137, 137, 137);
+    text-align: center;
 }
 #btnDiv{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     align-items: center;
+    margin: 20px 0px;
 }
 #paypal{
     display: flex;
     align-items: center;
+}
+#secondBtn{
+    height: 50px;
+    width: 150px;
+    border-radius: 4px;
+    background-color: #0066FF;
+    border: 1px solid #0066FF;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 20px;
+}
+#firstBtn {
+    height: 50px;
+    width: 150px;
+    border-radius: 4px;
+    border: 1px solid #0066FF;
+    color: #0066FF;
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 20px;
 }
 #priceMatch{
     display: flex;
@@ -171,7 +194,7 @@
     align-items: center;
 }
 #productPrimaryDivAlsoView{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 200px;
     height: 100%;
 }
